--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "input_folder": "D:/Portable/QuickTranslator",
     "output_folder": "D:/Projects/Python/python-translator/data",
     "ttkb_theme": "superhero",
+    "app_font": "Arial",
     "data_names": {
         "Names.txt": "zh_names.csv",
         "Names2.txt": "zh_names2.csv",
