--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
     "input_folder": "D:/Portable/QuickTranslator",
     "output_folder": "D:/Projects/Python/python-translator/data",
     "ttkb_theme": "superhero",
-    "app_font_name": "Arial",
-    "app_font_size": "130%",
+    "app_font_name": "UTM Daxline Medium",
+    "app_font_size": "110%",
     "data_names": {
         "Names.txt": "zh_names.csv",
         "Names2.txt": "zh_names2.csv",
